--- a/ci.yaml
+++ b/ci.yaml
@@ -1,10 +1,10 @@
 steps:
 # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/SERVICE-NAME:$COMMIT_SHA', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/semblance-service:$COMMIT_SHA', '.']
 # Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/SERVICE-NAME:$COMMIT_SHA']
+  args: ['push', 'gcr.io/$PROJECT_ID/semblance-service:$COMMIT_SHA']
 # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
@@ -13,12 +13,12 @@ steps:
   - 'deploy'
   - 'SERVICE-NAME'
   - '--image'
-  - 'gcr.io/$PROJECT_ID/SERVICE-NAME:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/semblance-service:$COMMIT_SHA'
   - '--port'
   - '4000'
   - '--region'
-  - 'REGION'
+  - 'us-central1'
   - '--platform'
   - 'managed'
 images:
-- 'gcr.io/$PROJECT_ID/SERVICE-NAME:$COMMIT_SHA'
+- 'gcr.io/$PROJECT_ID/semblance-service:$COMMIT_SHA'
