--- a/ci.yaml
+++ b/ci.yaml
@@ -11,7 +11,7 @@ steps:
   args:
   - 'run'
   - 'deploy'
-  - 'SERVICE-NAME'
+  - 'semblance-service'
   - '--image'
   - 'gcr.io/$PROJECT_ID/semblance-service:$COMMIT_SHA'
   - '--port'
