--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Semblance of Functionality
 subtitle: ''
-description: ''
+description: 'Blog about software quality, quality strategy, and more'
 keywords:
 author: Sarah Hutchins
 language: en
