Adding linkedin link

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -141,7 +141,7 @@ site_state: false
 social:
   GitHub: https://github.com/araneforseti || fab fa-github
   #E-Mail: mailto:yourname@gmail.com || fa fa-envelope
-  #Weibo: https://weibo.com/yourname || fab fa-weibo
+  LinkedIn: https://www.linkedin.com/in/shutchin/ || fab fa-linkedin
   #Google: https://plus.google.com/yourname || fab fa-google
   #Twitter: https://twitter.com/yourname || fab fa-twitter
   #FB Page: https://www.facebook.com/yourname || fab fa-facebook
