--- a/_config.yml
+++ b/_config.yml
@@ -106,3 +106,18 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+  
+# RSS Feed
+feed:
+  enable: true
+  type: rss2
+  path: rss2.xml
+  limit: 0
+  hub:
+  content: false
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+  icon: /images/favicon-32x32-semblancefunctionality.png
+  autodiscovery: true
+  template:
