--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://araneforseti.github.io/semblance-of-functionality
+url: https://semblanceoffunctionality.com
 permalink: :title/
 permalink_defaults:
 pretty_urls:
